sub menu align fix

--- a/Webadmin/src/main/webapp/assets/css/custom.css
+++ b/Webadmin/src/main/webapp/assets/css/custom.css
@@ -32,7 +32,7 @@ ul.checkList li
 }
 .SubNav
 {
-  padding-left:30px;
+  padding-left:8px;
 }
 
 .bg-info .bg-info.darken, .bg-info.darken {
